all back-end ready

--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Add a new dose: </h1>
+<h1>Create a new dose: </h1>
 
 <%= render 'form', dose: @dose %>
 
-<%= link_to 'Back', dose_path %>
+<%= link_to 'Back', cocktails_path %>
