--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,23 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>
-        <strong>Name:</strong>
-      </th>
-  </thead>
-
-  <tbody>
-    <tr>
-      <td><%= @cocktail.name %></td>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<h1> <%=@cocktail.name %></h1>
 
 
-<div class="button-div">
-  <%= link_to 'Back', cocktails_path, class: "btn btn-primary" %>
-  <%= link_to 'New Cocktail', new_cocktail_path(@cocktail.id), class: "btn btn-primary" %>
-</div>
+  <% @cocktail.doses.each do |dose| %>
+    <%= dose.ingredient.name%>
+    <% end %>
+
+  <%= link_to "Dose", new_cocktail_dose_path(@cocktail) %>
+
