--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -1,12 +1,15 @@
-<%= simple_form_for(@dose) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<%= simple_form_for ([@cocktail, @dose]) do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :description %>
-  </div>
+<div class="form-inputs">
+  <%= f.input :description %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <%= f.association :ingredient %>
+  <%= f.association :ingredient %>
+
+  <div class="cotainer-button">
+    <div class="btn-medium">
+      <%= f.button :submit %>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
